Fix headers and bugs and cards horizontal scroll and container

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ html {
 body {
   font-weight: 300;
   line-height: 1.6;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -161,15 +161,12 @@ p {
 .w-50vh {
   min-height: 50vh; }
 
-@media (min-width: 576px) {
-  .container {
-    max-width: 88vw; } }
-
 h1 {
   font-family: "Karla", sans-serif;
   color: #FFFFFF;
   font-size: 48px;
-  font-weight: bold; }
+  font-weight: bold;
+  letter-spacing: -0.05em; }
 
 .h2--smaller {
   font-family: "Karla", sans-serif;
@@ -183,13 +180,15 @@ h2 {
   color: #FFFFFF;
   font-size: 40px;
   padding-top: 0px;
-  padding-bottom: 0px; }
+  padding-bottom: 0px;
+  font-weight: bold;
+  letter-spacing: -0.05em; }
 
-h4 {
+.p--highlight {
   font-family: "Open Sans", sans-serif;
   color: rgba(255, 255, 255, 0.5);
   font-size: 20px;
-  letter-spacing: 2px;
+  letter-spacing: 0.2em;
   text-transform: uppercase; }
 
 h3 {
@@ -203,9 +202,17 @@ h3 {
   color: rgba(255, 255, 255, 0.5);
   font-size: 20px; }
 
-.text-small {
+.text-small, .p--content {
   font-family: "Open Sans", sans-serif;
   color: rgba(255, 255, 255, 0.5);
+  font-size: 16px;
+  font-weight: 300; }
+
+.text-link {
+  font-family: "Open Sans", sans-serif;
+  color: #FFFFFF;
+  font-weight: bold;
+  text-decoration: underline;
   font-size: 16px; }
 
 .button {
@@ -281,6 +288,7 @@ h3 {
     border-radius: 10px;
     display: flex;
     padding: 20px;
+    justify-content: space-between;
     margin-right: 15px; }
 
 @media (max-width: 575px) {
@@ -288,7 +296,7 @@ h3 {
     display: grid;
     grid-gap: calc(var(--gutter) / 2);
     grid-template-columns: repeat(5, calc(85% - var(--gutter) * 2));
-    grid-template-rows: minmax(150px, 1fr);
+    grid-template-rows: minmax(120px, 1fr);
     overflow-x: scroll;
     scroll-snap-type: x proximity;
     padding-bottom: calc(.75 * var(--gutter));
@@ -298,15 +306,33 @@ h3 {
   .pairs__cards > li:last-child {
     margin-right: 20px; } }
 
+@media (max-width: 400px) {
+  .pairs__cards ul {
+    display: grid;
+    grid-gap: calc(var(--gutter) / 2);
+    grid-template-columns: repeat(5, calc(100% - var(--gutter) * 2));
+    grid-template-rows: minmax(110px, 1fr);
+    overflow-x: scroll;
+    scroll-snap-type: x proximity;
+    padding-bottom: calc(.75 * var(--gutter));
+    margin-bottom: calc(-.25 * var(--gutter)); }
+  .pairs__cards > li {
+    width: 250px; }
+  .pairs__cards > li:last-child {
+    margin-right: 20px; } }
+
+.pairs__cards.app {
+  padding-left: 20px; }
+
 .pairs--text {
   margin-right: 24px; }
 
 .pairs--icon {
   display: flex;
   align-items: center; }
-  @media (max-width: 400px) {
+  @media (max-width: 575px) {
     .pairs--icon {
-      display: none; } }
+      width: 20%; } }
 
 .pair--title {
   color: #FFFFFF;
@@ -337,8 +363,16 @@ h3 {
   padding: var(--gutter) 0;
   display: grid;
   grid-gap: var(--gutter) 0;
-  grid-template-columns: var(--gutter) 1fr var(--gutter);
+  padding-left: 20px;
   align-content: start; }
+  @media (max-width: 475px) {
+    .app {
+      padding: var(--gutter) 0;
+      display: grid;
+      grid-gap: var(--gutter) 0;
+      align-content: start; } }
+  .app > ul > li:last-child {
+    padding-right: 20px; }
 
 .app > * {
   grid-column: 2 / -2; }
@@ -407,8 +441,7 @@ h3 {
   padding: .75rem 0 0.75rem 0; }
 
 .table tr td:last-child {
-  text-align: right;
-  text-decoration: underline; }
+  text-align: right; }
 
 .table th {
   vertical-align: top;
