--- a/scss/partials/core/_base.scss
+++ b/scss/partials/core/_base.scss
@@ -14,7 +14,7 @@ html {
 body {
   font-weight: 300;
   line-height: 1.6;
-  font-size: 18px;
+  font-size: 16px;
   font-family: $font-display;
 	-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
